Bug 433379 - Window Management > Window Behavior doesn't show orange circle when Highlight Changed Settings is enabled
Summary: Window Management > Window Behavior doesn't show orange circle when Highlight...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_kwinoptions (other bugs)
Version First Reported In: 5.21.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Cyril Rossi
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-02-21 11:27 UTC by Felipe Kinoshita
Modified: 2021-03-22 17:46 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.22
Sentry Crash Report:


Attachments
image showing observed result (54.17 KB, image/png)
2021-02-21 11:27 UTC, Felipe Kinoshita
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Felipe Kinoshita 2021-02-21 11:27:04 UTC
Created attachment 136009 [details]
image showing observed result

Window Management > Window Behavior doesn't show orange circle when Highlight Changed Settings is enabled, i did change the Window Placement so that windows start centered and when going to Window Management > Window Behavior > Advanced it highlights the Window Placement button in orange but the Window Behavior tab doesn't show the orange circle.

STEPS TO REPRODUCE
1. Change Window Placement in Window Management > Window Behavior > Advanced
2. Enable "Highlight Changed Settings"

OBSERVED RESULT
Window Behavior tab doesn't show the little orange circle indicating some setting is changed. 

EXPECTED RESULT
Window Behavior tab should show the little orange circle.

Linux/KDE Plasma: openSUSE Tumbleweed
(available in About System)
KDE Plasma Version: 5.21.0
KDE Frameworks Version: 5.79.0
Qt Version: 5.15.2
Comment 1 Cyril Rossi 2021-02-22 15:27:35 UTC
I can reproduce.
Comment 2 Bug Janitor Service 2021-03-12 08:43:28 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/776
Comment 3 Cyril Rossi 2021-03-22 17:03:48 UTC
Git commit 7c55f5ed7de038c42ecdd8876a0b5fedb1915e46 by Cyril Rossi.
Committed on 22/03/2021 at 16:30.
Pushed by crossi into branch 'master'.

KCM KWin Window Behavior : fix KCM default/reset state. Add KCModuleData to show default indicator at module level

M  +9    -1    src/kcmkwin/kwinoptions/CMakeLists.txt
M  +1    -1    src/kcmkwin/kwinoptions/kwinoptions_settings.kcfg
M  +35   -16   src/kcmkwin/kwinoptions/main.cpp
M  +3    -0    src/kcmkwin/kwinoptions/main.h
M  +22   -3    src/kcmkwin/kwinoptions/mouse.cpp
M  +6    -0    src/kcmkwin/kwinoptions/mouse.h
M  +34   -12   src/kcmkwin/kwinoptions/windows.cpp
M  +10   -4    src/kcmkwin/kwinoptions/windows.h

https://invent.kde.org/plasma/kwin/commit/7c55f5ed7de038c42ecdd8876a0b5fedb1915e46