KCM KWin Window Behavior : fix KCM default/reset state. Add KCModuleData to show default indicator at module level

BUG: 433379