src/kcmkwin/kwinoptions/mouse.h
@@ -46,6 +46,9 @@ public:
 
     void save() override;
 
+    bool isDefaults() const;
+    bool isSaveNeeded() const;
+
 protected:
     void initialize(KWinOptionsSettings *settings);
     void showEvent(QShowEvent *ev) override;
@@ -67,6 +70,9 @@ public:
     KWindowActionsConfig(bool _standAlone, KWinOptionsSettings *settings, QWidget *parent);
 
     void save() override;
+
+    bool isDefaults() const;
+    bool isSaveNeeded() const;
 
 protected:
     void initialize(KWinOptionsSettings *settings);
